added users section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,65 @@
           </div>
         </div>
       </section>
+      <section class="users raleway-normal">
+        <h3>What our users say</h3>
+        <div class="card-container">
+          <div class="card">
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <h4>Loved by Designers</h4>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="reviewer">
+              <img src="Assets/avatar.png" alt="" class="avatar" />
+              <div>
+                <h6 class="reviewer-name">Reviewer name</h6>
+                <p class="date">Date</p>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <h4>Loved by Designers</h4>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="reviewer">
+              <img src="Assets/avatar.png" alt="" class="avatar" />
+              <div>
+                <h6 class="reviewer-name">Reviewer name</h6>
+                <p class="date">Date</p>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <img src="Assets/icon-star.png" alt="" />
+            <h4>Loved by Designers</h4>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="reviewer">
+              <img src="Assets/avatar.png" alt="" class="avatar" />
+              <div>
+                <h6 class="reviewer-name">Reviewer name</h6>
+                <p class="date">Date</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="touch">
         <div class="raleway-normal touch-text">Let’s Get in Touch</div>
         <div class="inter-normal form-text">
