focus section added

--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
           </div>
         </div>
       </section>
+      <section class="focus raleway-normal">
+        <h3>Ready to focus better</h3>
+        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+        <button class="btn">Get Started Free</button>
+        <br />
+        <img src="Assets/wc-big.png" alt="" />
+      </section>
       <section class="touch">
         <div class="raleway-normal touch-text">Let’s Get in Touch</div>
         <div class="inter-normal form-text">
