--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment01</title>
+    <title>Landing Launchpad</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,18 +32,27 @@
       </div>
     </header>
     <main>
+      <!-- action section -->
+
       <section class="action raleway-normal">
         <div class="action-text">
-          <h4 class="action-title">See It in Action</h4>
-          <p class="action-description">
+          <h4>See It in Action</h4>
+          <p>
             Explore the live preview and imagine your brand in this bold new
             look.
           </p>
           <button class="btn">Launch Live Preview</button>
         </div>
 
-        <img src="Assets/wc-mini.png" alt="" class="webflow" />
+        <img
+          src="Assets/wc-mini.png"
+          alt="an image of wc mini"
+          class="action-img"
+        />
       </section>
+
+      <!-- productive section -->
+
       <section class="productive">
         <h3 class="raleway-normal">Joined Thousands of Productive Users</h3>
         <div class="productive-container inter-normal">
@@ -61,8 +70,11 @@
           </div>
         </div>
       </section>
-      <section class="users raleway-normal">
-        <h3>What our users say</h3>
+
+      <!-- users section -->
+
+      <section class="raleway-normal">
+        <h3 class="users-title">What our users say</h3>
         <div class="card-container">
           <div class="card">
             <img src="Assets/icon-star.png" alt="" />
@@ -72,13 +84,13 @@
             <img src="Assets/icon-star.png" alt="" />
             <h4>Loved by Designers</h4>
             <p>
-              This template instantly leveled up our presence.” – Studio Vertex
+              This template instantly leveled up our presence.” - Studio Vertex
             </p>
             <div class="reviewer">
-              <img src="Assets/avatar.png" alt="" class="avatar" />
+              <img src="Assets/avatar.png" alt="an image of a reviewer" />
               <div>
-                <h6 class="reviewer-name">Reviewer name</h6>
-                <p class="date">Date</p>
+                <h6>Reviewer name</h6>
+                <p>Date</p>
               </div>
             </div>
           </div>
@@ -90,13 +102,13 @@
             <img src="Assets/icon-star.png" alt="" />
             <h4>Loved by Designers</h4>
             <p>
-              This template instantly leveled up our presence.” – Studio Vertex
+              This template instantly leveled up our presence.” - Studio Vertex
             </p>
             <div class="reviewer">
-              <img src="Assets/avatar.png" alt="" class="avatar" />
+              <img src="Assets/avatar.png" alt="an image of a reviewer" />
               <div>
-                <h6 class="reviewer-name">Reviewer name</h6>
-                <p class="date">Date</p>
+                <h6>Reviewer name</h6>
+                <p>Date</p>
               </div>
             </div>
           </div>
@@ -108,28 +120,33 @@
             <img src="Assets/icon-star.png" alt="" />
             <h4>Loved by Designers</h4>
             <p>
-              This template instantly leveled up our presence.” – Studio Vertex
+              This template instantly leveled up our presence.” - Studio Vertex
             </p>
             <div class="reviewer">
-              <img src="Assets/avatar.png" alt="" class="avatar" />
+              <img src="Assets/avatar.png" alt="an image of a reviewer" />
               <div>
-                <h6 class="reviewer-name">Reviewer name</h6>
-                <p class="date">Date</p>
+                <h6>Reviewer name</h6>
+                <p>Date</p>
               </div>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- focus section -->
+
       <section class="focus raleway-normal">
         <h3>Ready to focus better</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
-        <button class="btn">Get Started Free</button>
-        <br />
-        <img src="Assets/wc-big.png" alt="" />
+        <div><button class="btn">Get Started Free</button></div>
+        <div><img src="Assets/wc-big.png" alt="an image of wc big" /></div>
       </section>
+
+      <!-- touch section -->
+
       <section class="touch">
-        <div class="raleway-normal touch-text">Let’s Get in Touch</div>
-        <div class="inter-normal form-text">
+        <div class="raleway-normal touch-title">Let's Get in Touch</div>
+        <div class="inter-normal touch-form">
           <label for="">Email</label>
           <br />
           <input type="email" name="" id="" placeholder="example@email.com" />
@@ -143,7 +160,7 @@
           <textarea
             name=""
             id=""
-            placeholder="write your meassages..."
+            placeholder="write your messages..."
             rows="4"
           ></textarea>
           <br />
@@ -151,13 +168,14 @@
         </div>
       </section>
     </main>
+
     <footer class="inter-normal">
       <h1>LOGO</h1>
-      <p class="footer-text">
+      <p>
         Ready to elevate your online presence? Contact us today to discuss your
         project and discover how we can bring your vision to life.
       </p>
-      <div class="footer-text">
+      <div>
         <ul class="footer-links">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
